--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "start": "webpack serve --config ./webpack/webpack.config.js --env env=dev",
     "build": "webpack --config ./webpack/webpack.config.js --env env=prod",
     "build:analyze": "npm run build -- --env addon=bundleanalyze",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "install-firebase": "cd firebase/functions && npm i",
+    "serve": "cd firebase && firebase emulators:start --only functions",
+    "shell": "cd firebase && firebase functions:shell",
+    "start-firebase": "cd firebase && npm run shell",
+    "deploy": "cd firebase && firebase deploy --only functions",
+    "logs": "cd firebase && firebase functions:log"
   },
   "keywords": [],
   "author": "Phat Nguyen",
