--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "shell": "cd firebase && firebase functions:shell",
     "start-firebase": "cd firebase && npm run shell",
     "deploy": "cd firebase && firebase deploy --only functions",
-    "logs": "cd firebase && firebase functions:log"
+    "logs": "cd firebase && firebase functions:log",
+    "eslint:fix": "eslint --fix-dry-run"
   },
   "keywords": [],
   "author": "Phat Nguyen",
@@ -26,7 +27,7 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "dotenv-webpack": "^6.0.0",
-    "eslint": "^7.2.0",
+    "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
@@ -36,16 +37,21 @@
     "html-webpack-plugin": "^5.0.0-beta.1",
     "react-hot-loader": "^4.13.0",
     "url-loader": "^4.1.1",
-    "webpack": "^5.3.2",
+    "webpack": "^5.11.1",
     "webpack-bundle-analyzer": "^4.3.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-query": "^3.5.6",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1"
   }
 }
