--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "clsx": "^1.1.1",
     "dotenv-webpack": "^6.0.0",
     "eslint": "^7.16.0",
     "eslint-config-airbnb": "^18.2.1",
