--- a/package.json
+++ b/package.json
@@ -8,12 +8,6 @@
     "build": "webpack --config ./webpack/webpack.config.js --env env=prod",
     "build:analyze": "npm run build -- --env addon=bundleanalyze",
     "test": "echo \"No test specified\" && exit 0",
-    "install-firebase": "cd firebase/functions && npm i",
-    "serve": "cd firebase && firebase emulators:start --only functions",
-    "shell": "cd firebase && firebase functions:shell",
-    "start-firebase": "cd firebase && npm run shell",
-    "deploy": "cd firebase && firebase deploy --only functions",
-    "logs": "cd firebase && firebase functions:log",
     "eslint:fix": "eslint --fix-dry-run"
   },
   "keywords": [],
@@ -48,6 +42,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
+    "history": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
