--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.2.10",
     "@progress/kendo-data-query": "^1.5.4",
     "@progress/kendo-drawing": "^1.9.3",
     "@progress/kendo-licensing": "^1.1.3",
@@ -60,12 +62,14 @@
     "@progress/kendo-react-intl": "^4.1.0",
     "@progress/kendo-react-pdf": "^4.1.0",
     "axios": "^0.21.1",
+    "date-fns": "^2.16.1",
     "history": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-query": "^3.5.6",
     "react-router-dom": "^5.2.0",
+    "recharts": "^2.0.0",
     "styled-components": "^5.2.1"
   }
 }
